<resources>
    <string name="app_name">DowntownTerreHaute</string>
    <string name="action_settings">Settings</string>
    <string name="mainScreenTitle">Welcome to Downtown Terre Haute</string>
    <string name="viewCalendarOfEvents">View Calendar of Events</string>
    <string name="findWhatYouNeed">Find What You Need</string>
    <string name="shareYourExperience">Share Your Experience</string>
    <string name="searchPageMainText">Downtown Terre Haute Search Page</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="searchMainText">Downtown Terre Haute Search Page</string>
    <string name="restaurants">Restaurants</string>
    <string name="museums_button">museums</string>
    <string name="shops_button">shops</string>
    <string name="bars_button">bars</string>
    <string name="calendar_of_events_text">Downtown Terre Haute Calendar of Events</string>
    <string name="title_activity_event_information">EventInformationActivity</string>
    <string name="eventInformationMainText">Event Information</string>
    <string name="nameText">Name:</string>
    <string name="event_information_main_text">Event Information</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="socialPage">Downtown Terre Haute Social Media Page</string>
    <string name="postStatus">Post a status</string>
    <string name="title_activity_calender_list_tab_host">CalenderListTabHost</string>
    <string name="post_a_status">Post a status</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_establishment_information">EstablishmentInformationActivity
    </string>
    <string name="establishment_information">Establishment Information</string>
    <string name="dialog_add_title" />
</resources>
