<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_search"
    tools:context="edu.rose_hulman.cookmn.downtownterrehaute.SearchActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchMainText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="34dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:id="@+id/textView" />

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchView"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/restaurants"
        android:id="@+id/restaurants_button"
        android:layout_marginTop="170dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/museums_button"
        android:id="@+id/museums_button"
        android:layout_marginTop="235dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/shops_button"
        android:id="@+id/shops_button"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/bars_button"
        android:id="@+id/bars_button"
        android:layout_marginTop="365dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
