<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.rose_hulman.cookmn.downtownterrehaute.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainScreenTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="34dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:id="@+id/textView" />

    <Button
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:text="@string/viewCalendarOfEvents"
        android:id="@+id/calendar_of_events_button"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:text="@string/findWhatYouNeed"
        android:id="@+id/search_button"
        android:layout_below="@+id/calendar_of_events_button"
        android:layout_alignLeft="@+id/calendar_of_events_button"
        android:layout_alignStart="@+id/calendar_of_events_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:text="@string/shareYourExperience"
        android:id="@+id/share_button"
        android:layout_below="@+id/search_button"
        android:layout_alignLeft="@+id/search_button"
        android:layout_alignStart="@+id/search_button"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
